# hoppMCMC

./: MANIFEST.in  NEWS.txt  README.md  README.txt  pyproject.toml  setup.cfg  setup.py
examples/: example1.py
src/hoppMCMC/: __init__.py  test.py
src/hoppMCMC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hoppMCMC/examples/: example1.py  example2.py  example3.py
src/inferFun/: __init__.py
src/myMPI/: __init__.py
