[metadata]
name = hoppMCMC
version = 2.0.0
description = Adaptive basin-hopping MCMC and ABC inference with MPI support
author = Kamil Erguler
author_email = k.erguler@cyi.ac.cy
license = GPLv3
long_description = file: README.txt, NEWS.txt
long_description_content_type = text/plain

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    numpy>=1.22
    scipy>=1.10
    mpi4py>=3.1
python_requires = >=3.8
zip_safe = False
